# CrewAI

./: README.md  formatting_task.txt  pyproject.toml
src/network_device/: crew.py  main.py
src/network_device/config/: agents.yaml  tasks.yaml
